Alignment fixes on mobile

--- a/static/css/main-override.css
+++ b/static/css/main-override.css
@@ -1,3 +1,4 @@
 main {
     max-width: 75%;
+    padding: 0px;
 }
